Finished the check for invalid moves